data/derived/fa15/progs/unify/prog3704.ml.out
Characters 74-75:
  | _ -> bigAdd l (mulByDigit (i-1) l);;
                ^
Error: This expression has type int but an expression was expected of type
         int list
